--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,15 @@
     }],
     "require" : {
         "php" : ">=5.3.0",
-        "zendframework/zendframework": "master"
+        "zendframework/zend-mvc": "master",
+        "zendframework/zend-http": "master",
+        "zendframework/zend-view": "master",
+        "zendframework/zend-stdlib": "master",
+        "zendframework/zend-servicemanager": "master",
+        "zendframework/zend-loader": "master",
+        "zendframework/zend-validator": "master",
+        "zendframework/zend-modulemanager": "master",
+        "zendframework/zend-eventmanager": "master"
     },
     "autoload" : {
         "psr-0" : {
